test/libsolidity/syntaxTests/operators/userDefined/defining_operator_for_library.sol
using {f as +} for L global;

function f() pure {}
library L {}
// ----
// TypeError 1130: (19-20): Invalid use of a library name.
